--- a/appmacas/templates/nuevo_empleado.html
+++ b/appmacas/templates/nuevo_empleado.html
@@ -12,6 +12,9 @@
 	  <li class="nav-item">
 	    <a class="nav-link active" href="{% url 'nuevo_empleado' %}">Nuevo Empleado</a>
 	  </li>
+	  <li class="nav-item">
+	    <a class="nav-link" href="{% url 'listar_empleado' %}">Listar Empleado</a>
+	  </li>
 	  
 	</ul>
 	{% endblock %}
